// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Theory Card Registry Snapshots > should match builtin theory cards snapshot 1`] = `
[
  "theory:bebop_scale",
  "theory:bodhran",
  "theory:carnatic_raga_tala",
  "theory:celtic_tune",
  "theory:chinese_mode",
  "theory:chord_scale_unity",
  "theory:coltrane_changes",
  "theory:constraint_pack",
  "theory:digital_pattern",
  "theory:drone",
  "theory:enclosure",
  "theory:erhu_ornament",
  "theory:fill_builder",
  "theory:film_leitmotif_integration",
  "theory:film_scoring",
  "theory:grouping",
  "theory:guide_tone",
  "theory:guzheng_gliss",
  "theory:heterophony",
  "theory:korvai_generator",
  "theory:leitmotif_library",
  "theory:leitmotif_matcher",
  "theory:lick_library",
  "theory:lydian_chromatic",
  "theory:meter_accent",
  "theory:motif_developer",
  "theory:mridangam_pattern",
  "theory:ornament_generator",
  "theory:outside",
  "theory:parent_scale",
  "theory:reharmonization",
  "theory:schema",
  "theory:set_builder",
  "theory:tonal_gravity_visualizer",
  "theory:tonality_model",
  "theory:trailer_build",
  "theory:tritone_sub",
  "theory:upper_structure",
]
`;

exports[`Theory Card Registry Snapshots > should match registered theory card IDs snapshot 1`] = `
[
  "analysis:culture",
  "analysis:grouping",
  "analysis:schema",
  "analysis:tonality",
  "schema:browser",
  "schema:constraint",
  "schema:to_bass",
  "schema:to_chords",
  "schema:to_melody",
  "schema:variation",
  "theory:bebop_scale",
  "theory:bodhran",
  "theory:carnatic_raga_tala",
  "theory:celtic_tune",
  "theory:chinese_mode",
  "theory:chord_scale_unity",
  "theory:coltrane_changes",
  "theory:constraint_pack",
  "theory:digital_pattern",
  "theory:drone",
  "theory:enclosure",
  "theory:erhu_ornament",
  "theory:fill_builder",
  "theory:film_leitmotif_integration",
  "theory:film_scoring",
  "theory:grouping",
  "theory:guide_tone",
  "theory:guzheng_gliss",
  "theory:heterophony",
  "theory:korvai_generator",
  "theory:leitmotif_library",
  "theory:leitmotif_matcher",
  "theory:lick_library",
  "theory:lydian_chromatic",
  "theory:meter_accent",
  "theory:motif_developer",
  "theory:mridangam_pattern",
  "theory:ornament_generator",
  "theory:outside",
  "theory:parent_scale",
  "theory:reharmonization",
  "theory:schema",
  "theory:set_builder",
  "theory:tonal_gravity_visualizer",
  "theory:tonality_model",
  "theory:trailer_build",
  "theory:tritone_sub",
  "theory:upper_structure",
]
`;

exports[`Theory Card Registry Snapshots > should match theory card categories snapshot 1`] = `
[
  "analysis",
  "generation",
  "style",
  "theory",
  "world",
]
`;

exports[`Theory Card Registry Snapshots > should match theory card constraint types snapshot 1`] = `[]`;

exports[`Theory Card Registry Snapshots > should match theory card metadata snapshot 1`] = `
[
  {
    "cardId": "analysis:culture",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "culture",
    "namespace": "analysis",
  },
  {
    "cardId": "analysis:grouping",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "grouping",
    "namespace": "analysis",
  },
  {
    "cardId": "analysis:schema",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "schema",
    "namespace": "analysis",
  },
  {
    "cardId": "analysis:tonality",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "tonality",
    "namespace": "analysis",
  },
  {
    "cardId": "schema:browser",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "browser",
    "namespace": "schema",
  },
  {
    "cardId": "schema:constraint",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "constraint",
    "namespace": "schema",
  },
  {
    "cardId": "schema:to_bass",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "to_bass",
    "namespace": "schema",
  },
  {
    "cardId": "schema:to_chords",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "to_chords",
    "namespace": "schema",
  },
  {
    "cardId": "schema:to_melody",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "to_melody",
    "namespace": "schema",
  },
  {
    "cardId": "schema:variation",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "variation",
    "namespace": "schema",
  },
  {
    "cardId": "theory:bebop_scale",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "bebop_scale",
    "namespace": "theory",
  },
  {
    "cardId": "theory:bodhran",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "bodhran",
    "namespace": "theory",
  },
  {
    "cardId": "theory:carnatic_raga_tala",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "carnatic_raga_tala",
    "namespace": "theory",
  },
  {
    "cardId": "theory:celtic_tune",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "celtic_tune",
    "namespace": "theory",
  },
  {
    "cardId": "theory:chinese_mode",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "chinese_mode",
    "namespace": "theory",
  },
  {
    "cardId": "theory:chord_scale_unity",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "chord_scale_unity",
    "namespace": "theory",
  },
  {
    "cardId": "theory:coltrane_changes",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "coltrane_changes",
    "namespace": "theory",
  },
  {
    "cardId": "theory:constraint_pack",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "constraint_pack",
    "namespace": "theory",
  },
  {
    "cardId": "theory:digital_pattern",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "digital_pattern",
    "namespace": "theory",
  },
  {
    "cardId": "theory:drone",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "drone",
    "namespace": "theory",
  },
  {
    "cardId": "theory:enclosure",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "enclosure",
    "namespace": "theory",
  },
  {
    "cardId": "theory:erhu_ornament",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "erhu_ornament",
    "namespace": "theory",
  },
  {
    "cardId": "theory:fill_builder",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "fill_builder",
    "namespace": "theory",
  },
  {
    "cardId": "theory:film_leitmotif_integration",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "film_leitmotif_integration",
    "namespace": "theory",
  },
  {
    "cardId": "theory:film_scoring",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "film_scoring",
    "namespace": "theory",
  },
  {
    "cardId": "theory:grouping",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "grouping",
    "namespace": "theory",
  },
  {
    "cardId": "theory:guide_tone",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "guide_tone",
    "namespace": "theory",
  },
  {
    "cardId": "theory:guzheng_gliss",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "guzheng_gliss",
    "namespace": "theory",
  },
  {
    "cardId": "theory:heterophony",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "heterophony",
    "namespace": "theory",
  },
  {
    "cardId": "theory:korvai_generator",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "korvai_generator",
    "namespace": "theory",
  },
  {
    "cardId": "theory:leitmotif_library",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "leitmotif_library",
    "namespace": "theory",
  },
  {
    "cardId": "theory:leitmotif_matcher",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "leitmotif_matcher",
    "namespace": "theory",
  },
  {
    "cardId": "theory:lick_library",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "lick_library",
    "namespace": "theory",
  },
  {
    "cardId": "theory:lydian_chromatic",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "lydian_chromatic",
    "namespace": "theory",
  },
  {
    "cardId": "theory:meter_accent",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "meter_accent",
    "namespace": "theory",
  },
  {
    "cardId": "theory:motif_developer",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "motif_developer",
    "namespace": "theory",
  },
  {
    "cardId": "theory:mridangam_pattern",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "mridangam_pattern",
    "namespace": "theory",
  },
  {
    "cardId": "theory:ornament_generator",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "ornament_generator",
    "namespace": "theory",
  },
  {
    "cardId": "theory:outside",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "outside",
    "namespace": "theory",
  },
  {
    "cardId": "theory:parent_scale",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "parent_scale",
    "namespace": "theory",
  },
  {
    "cardId": "theory:reharmonization",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "reharmonization",
    "namespace": "theory",
  },
  {
    "cardId": "theory:schema",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "schema",
    "namespace": "theory",
  },
  {
    "cardId": "theory:set_builder",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "set_builder",
    "namespace": "theory",
  },
  {
    "cardId": "theory:tonal_gravity_visualizer",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "tonal_gravity_visualizer",
    "namespace": "theory",
  },
  {
    "cardId": "theory:tonality_model",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "tonality_model",
    "namespace": "theory",
  },
  {
    "cardId": "theory:trailer_build",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "trailer_build",
    "namespace": "theory",
  },
  {
    "cardId": "theory:tritone_sub",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "tritone_sub",
    "namespace": "theory",
  },
  {
    "cardId": "theory:upper_structure",
    "hasCard": true,
    "hasCategory": true,
    "hasDescription": true,
    "hasDisplayName": true,
    "hasNamespace": true,
    "name": "upper_structure",
    "namespace": "theory",
  },
]
`;

exports[`Theory Card Registry Snapshots > should validate theory card namespaces 1`] = `
[
  "analysis",
  "schema",
  "theory",
]
`;
